--- a/Spotify Clone/styles.css
+++ b/Spotify Clone/styles.css
@@ -3,6 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    background-color: rgb(171, 169, 166);
+}
 .navbar{
     display: flex;
 
